...
            val context = LocalContext.current
            val gameRankingResult = vm.rankings
            val refreshingState: RefreshingState =
                if (vm.isLoading) RefreshingState.Refreshing
                else RefreshingState.Idle

            RankingsScreen(
                gameRankingResult?.getWith(context),
                refreshingState,
                onRefresh = vm::loadRankings,
                NavigationHandlers(
                    onInfoRequested = { InfoActivity.navigate(origin = this) },
                    onBackRequested = { finish() }
...
