...
            else LoadingState.Idle

        val isLoginLoading =
            if (vm.isLoginLoading.value) LoadingState.Loading
            else LoadingState.Idle

        AuthScreen(
            isLogin = isLoginLoading,
            isRegister = isCreateUserLoading,
            onRegisterUser = { username, password ->
                vm.createUser(username, password, true, ApiErrorHandler(context))
            },
            onLoginUser = { username, password ->
...
